# retrofuturism

./: README.md  pyproject.toml
data/: retrofuturism_entries.json  schema.json
docs/: INDEX.md  application_domains.md  color_material_surface.md  composition_logic.md  glossary.md  historical_and_regional_variants.md  motif_vocabulary.md  prompting_guide.md  taxonomy.md  visual_traits.md
examples/: prompt_templates.md
src/retrofuturism_db/: __init__.py  cli.py  database.py
